updated formating of board to center header boxes and change font and style for dollar values

--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="game-board">
         <div class="category">
-            <div class="category-header">CATEGORY ONE</div>
+            <div class="category-box">
+                <div class="category-header">CATEGORY ONE</div>
+            </div>
             <div class="category-answer" id="0">$100</div>
             <div class="category-answer" id="1">$200</div>
             <div class="category-answer" id="2">$300</div>
@@ -20,7 +23,9 @@
             <div class="category-answer" id="4">$500</div>
         </div>
         <div class="category">
-            <div class="category-header">CATEGORY TWO</div>
+            <div class="category-box">
+                <div class="category-header">CATEGORY TWO</div>
+            </div>
             <div class="category-answer" id="10">$100</div>
             <div class="category-answer" id="11">$200</div>
             <div class="category-answer" id="12">$300</div>
@@ -28,28 +33,39 @@
             <div class="category-answer" id="14">$500</div>
         </div>
         <div class="category">
-            <div class="category-header">CATEGORY THREE</div>
+            <div class="category-box">
+                <div class="category-header">CATEGORY THREE</div>
+            </div>
             <div class="category-answer" id="20">$100</div>
             <div class="category-answer" id="21">$200</div>
             <div class="category-answer" id="22">$300</div>
             <div class="category-answer" id="23">$400</div>
             <div class="category-answer" id="24">$500</div>
-        </div><div class="category">
-            <div class="category-header">CATEGORY FOUR</div>
+        </div>
+        <div class="category">
+            <div class="category-box">
+                <div class="category-header">CATEGORY FOUR</div>
+            </div>
             <div class="category-answer" id="30">$100</div>
             <div class="category-answer" id="31">$200</div>
             <div class="category-answer" id="32">$300</div>
             <div class="category-answer" id="33">$400</div>
             <div class="category-answer" id="34">$500</div>
-        </div><div class="category">
-            <div class="category-header">CATEGORY FIVE</div>
+        </div>
+        <div class="category">
+            <div class="category-box">
+                <div class="category-header">CATEGORY FIVE</div>
+            </div>
             <div class="category-answer" id="40">$100</div>
             <div class="category-answer" id="41">$200</div>
             <div class="category-answer" id="42">$300</div>
             <div class="category-answer" id="43">$400</div>
             <div class="category-answer" id="44">$500</div>
-        </div><div class="category">
-            <div class="category-header">CATEGORY SIX</div>
+        </div>
+        <div class="category">
+            <div class="category-box">
+                <div class="category-header">CATEGORY SIX</div>
+            </div>
             <div class="category-answer" id="50">$100</div>
             <div class="category-answer" id="51">$200</div>
             <div class="category-answer" id="52">$300</div>
