recoded html to center dollar value tile text

--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -16,61 +16,121 @@
             <div class="category-box">
                 <div class="category-header">CATEGORY ONE</div>
             </div>
-            <div class="category-answer" id="0">$100</div>
-            <div class="category-answer" id="1">$200</div>
-            <div class="category-answer" id="2">$300</div>
-            <div class="category-answer" id="3">$400</div>
-            <div class="category-answer" id="4">$500</div>
+            <div class="category-answer-box" id="0">
+                <div class="category-answer">$100</div>
+            </div>
+            <div class="category-answer-box" id="1">
+                <div class="category-answer">$200</div>
+            </div>
+            <div class="category-answer-box" id="2">
+                <div class="category-answer">$300</div>
+            </div>
+            <div class="category-answer-box" id="3">
+                <div class="category-answer">$400</div>
+            </div>
+            <div class="category-answer-box" id="4">
+                <div class="category-answer">$500</div>
+            </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY TWO</div>
             </div>
-            <div class="category-answer" id="10">$100</div>
-            <div class="category-answer" id="11">$200</div>
-            <div class="category-answer" id="12">$300</div>
-            <div class="category-answer" id="13">$400</div>
-            <div class="category-answer" id="14">$500</div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="10">$100</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="11">$200</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="12">$300</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="13">$400</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="14">$500</div>
+            </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY THREE</div>
             </div>
-            <div class="category-answer" id="20">$100</div>
-            <div class="category-answer" id="21">$200</div>
-            <div class="category-answer" id="22">$300</div>
-            <div class="category-answer" id="23">$400</div>
-            <div class="category-answer" id="24">$500</div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="20">$100</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="21">$200</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="22">$300</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="23">$400</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="24">$500</div>
+            </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY FOUR</div>
             </div>
-            <div class="category-answer" id="30">$100</div>
-            <div class="category-answer" id="31">$200</div>
-            <div class="category-answer" id="32">$300</div>
-            <div class="category-answer" id="33">$400</div>
-            <div class="category-answer" id="34">$500</div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="30">$100</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="31">$200</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="32">$300</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="33">$400</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="34">$500</div>
+            </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY FIVE</div>
             </div>
-            <div class="category-answer" id="40">$100</div>
-            <div class="category-answer" id="41">$200</div>
-            <div class="category-answer" id="42">$300</div>
-            <div class="category-answer" id="43">$400</div>
-            <div class="category-answer" id="44">$500</div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="40">$100</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="41">$200</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="42">$300</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="43">$400</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="44">$500</div>
+            </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY SIX</div>
             </div>
-            <div class="category-answer" id="50">$100</div>
-            <div class="category-answer" id="51">$200</div>
-            <div class="category-answer" id="52">$300</div>
-            <div class="category-answer" id="53">$400</div>
-            <div class="category-answer" id="54">$500</div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="50">$100</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="51">$200</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="52">$300</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="53">$400</div>
+            </div>
+            <div class="category-answer-box">
+                <div class="category-answer" id="54">$500</div>
+            </div>
         </div>
     </div>
     
