moved id for dollar value tiles to outer category answer boxes

--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -36,100 +36,100 @@
             <div class="category-box">
                 <div class="category-header">CATEGORY TWO</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="10">$100</div>
+            <div class="category-answer-box" id="10">
+                <div class="category-answer">$100</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="11">$200</div>
+            <div class="category-answer-box" id="11">
+                <div class="category-answer">$200</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="12">$300</div>
+            <div class="category-answer-box" id="12">
+                <div class="category-answer">$300</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="13">$400</div>
+            <div class="category-answer-box" id="13">
+                <div class="category-answer">$400</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="14">$500</div>
+            <div class="category-answer-box" id="14">
+                <div class="category-answer">$500</div>
             </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY THREE</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="20">$100</div>
+            <div class="category-answer-box" id="20">
+                <div class="category-answer">$100</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="21">$200</div>
+            <div class="category-answer-box" id="21">
+                <div class="category-answer">$200</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="22">$300</div>
+            <div class="category-answer-box" id="22">
+                <div class="category-answer">$300</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="23">$400</div>
+            <div class="category-answer-box" id="23">
+                <div class="category-answer">$400</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="24">$500</div>
+            <div class="category-answer-box" id="24">
+                <div class="category-answer">$500</div>
             </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY FOUR</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="30">$100</div>
+            <div class="category-answer-box" id="30">
+                <div class="category-answer">$100</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="31">$200</div>
+            <div class="category-answer-box" id="31">
+                <div class="category-answer">$200</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="32">$300</div>
+            <div class="category-answer-box" id="32">
+                <div class="category-answer">$300</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="33">$400</div>
+            <div class="category-answer-box" id="33">
+                <div class="category-answer">$400</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="34">$500</div>
+            <div class="category-answer-box" id="34">
+                <div class="category-answer">$500</div>
             </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY FIVE</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="40">$100</div>
+            <div class="category-answer-box" id="40">
+                <div class="category-answer">$100</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="41">$200</div>
+            <div class="category-answer-box" id="41">
+                <div class="category-answer">$200</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="42">$300</div>
+            <div class="category-answer-box" id="42">
+                <div class="category-answer">$300</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="43">$400</div>
+            <div class="category-answer-box" id="43">
+                <div class="category-answer">$400</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="44">$500</div>
+            <div class="category-answer-box" id="44">
+                <div class="category-answer">$500</div>
             </div>
         </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY SIX</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="50">$100</div>
+            <div class="category-answer-box" id="50">
+                <div class="category-answer">$100</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="51">$200</div>
+            <div class="category-answer-box" id="51">
+                <div class="category-answer">$200</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="52">$300</div>
+            <div class="category-answer-box" id="52">
+                <div class="category-answer">$300</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="53">$400</div>
+            <div class="category-answer-box" id="53">
+                <div class="category-answer">$400</div>
             </div>
-            <div class="category-answer-box">
-                <div class="category-answer" id="54">$500</div>
+            <div class="category-answer-box" id="54">
+                <div class="category-answer">$500</div>
             </div>
         </div>
     </div>
