--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -11,7 +11,31 @@
     <title>Document</title>
 </head>
 <body>
+    <div class=header>
+        <h1>JEOPARDY!</h1>
+    </div>
     <div class="game-board">
+        <div class="modal-box">
+            <h2>For $200 in Famous Golf Courses...</h2>
+            <div class="modal-answer">
+                <div class="modal-answer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                </div>
+            </div>
+            <!-- <h3>Submit your choice</h3> -->
+            <div class="modal-choices">
+                <p>A. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>B. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>C. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>D. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <form>
+                <input type="radio" name="choice" value="0">A
+                <input type="radio" name="choice" value="1">B
+                <input type="radio" name="choice" value="2">C
+                <input type="radio" name="choice" value="3">D
+                <input type="submit" value="submit" id="submit">
+            </form>
+        </div>
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY ONE</div>
@@ -133,6 +157,5 @@
             </div>
         </div>
     </div>
-    
 </body>
 </html>
