javascript creates answer modal and removes with submit button

--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -14,14 +14,13 @@
     <div class=header>
         <h1>JEOPARDY!</h1>
     </div>
-    <div class="game-board">
-        <div class="modal-box">
+    <div id="game-board">
+        <!-- <div class="modal-box">
             <h2>For $200 in Famous Golf Courses...</h2>
             <div class="modal-answer">
                 <div class="modal-answer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 </div>
             </div>
-            <!-- <h3>Submit your choice</h3> -->
             <div class="modal-choices">
                 <p>A. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <p>B. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -35,7 +34,7 @@
                 <input type="radio" name="choice" value="3">D
                 <input type="submit" value="submit" id="submit">
             </form>
-        </div>
+        </div> -->
         <div class="category">
             <div class="category-box">
                 <div class="category-header">CATEGORY ONE</div>
