--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -14,6 +14,16 @@
     <div class=header>
         <h1>JEOPARDY!</h1>
     </div>
+    <div id="player-info">
+        <div class="player-info-box">
+            <div class="player-info-label">NAME: </div>
+            <div id="player-name">LAURA</div>
+        </div>
+        <div class="player-info-box">
+            <div class="player-info-label">SCORE: </div>
+            <div id="player-score">$10,000</div>
+        </div>
+    </div>
     <div id="game-board">
         <!-- <div class="modal-box">
             <h2>For $200 in Famous Golf Courses...</h2>
