--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Jeopardy!</title>
 </head>
 <body>
     <div class=header>
