finished game mechanics code

--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="player-info-box">
             <div class="player-info-label">SCORE: </div>
-            <div id="player-score">$10,000</div>
+            <div id="player-score">0</div>
         </div>
     </div>
     <div id="game-board">
