tested first category of answers

--- a/jeopardy-game/index.html
+++ b/jeopardy-game/index.html
@@ -47,7 +47,7 @@
         </div> -->
         <div class="category">
             <div class="category-box">
-                <div class="category-header">CATEGORY ONE</div>
+                <div class="category-header">ENTERTAINMENT AWARDS</div>
             </div>
             <div class="category-answer-box" id="0">
                 <div class="category-answer">$100</div>
@@ -67,7 +67,7 @@
         </div>
         <div class="category">
             <div class="category-box">
-                <div class="category-header">CATEGORY TWO</div>
+                <div class="category-header">CAPITAL CITIES</div>
             </div>
             <div class="category-answer-box" id="10">
                 <div class="category-answer">$100</div>
@@ -87,7 +87,7 @@
         </div>
         <div class="category">
             <div class="category-box">
-                <div class="category-header">CATEGORY THREE</div>
+                <div class="category-header">FOOD STUFF</div>
             </div>
             <div class="category-answer-box" id="20">
                 <div class="category-answer">$100</div>
@@ -107,7 +107,7 @@
         </div>
         <div class="category">
             <div class="category-box">
-                <div class="category-header">CATEGORY FOUR</div>
+                <div class="category-header">GROUP NUMBERS</div>
             </div>
             <div class="category-answer-box" id="30">
                 <div class="category-answer">$100</div>
@@ -127,7 +127,7 @@
         </div>
         <div class="category">
             <div class="category-box">
-                <div class="category-header">CATEGORY FIVE</div>
+                <div class="category-header">IVY LEAGUE</div>
             </div>
             <div class="category-answer-box" id="40">
                 <div class="category-answer">$100</div>
@@ -147,7 +147,7 @@
         </div>
         <div class="category">
             <div class="category-box">
-                <div class="category-header">CATEGORY SIX</div>
+                <div class="category-header">CLASSIC MOVIE LINES</div>
             </div>
             <div class="category-answer-box" id="50">
                 <div class="category-answer">$100</div>
